Basic requiremnt done

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'assignment' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
+
   target 'assignmentTests' do
     inherit! :complete
     # Pods for testing
