--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,6 @@
-rootProject.name = 'assignment'
+// rootProject.name = 'assignment'
+include ':lottie-react-native'
+project(':lottie-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/lottie-react-native/src/android')
+rootProject.name = 'Sia Music'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
