Signed Keyfile and realated settings updated

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+# Keys
+MYAPP_UPLOAD_STORE_FILE=siamusic.keystore
+MYAPP_UPLOAD_KEY_ALIAS=siamusic
+MYAPP_UPLOAD_STORE_PASSWORD=password
+MYAPP_UPLOAD_KEY_PASSWORD=password
